--- a/home.html
+++ b/home.html
@@ -1,1 +1,16 @@
-g
+<!DOCTYPE html>
+<html>
+<head>
+<title>Malcolm Andrews Portfolio</title>
+</head>
+<body>
+    <section>
+        <img src="images/profilepic.jpg" id="profilepic" class="floatingimage"\>
+    </section>
+    <section>
+        <div class="floatingnav" id="about">About</div>
+        <div class="floatingnav" id="blog">Blog</div>
+        <div class="floatingnav" id="contact">Contact</div>
+    </section>
+</body>
+</html>
