updated home page

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <section>
-        <img src="images/profilepic.jpg" id="profilepic" class="floatingimage"\>
+        <img src="images/profilepic.jpg" id="profilepic" class="floatingimage"/>
     </section>
     <section>
         <div class="floatingnav" id="about">About</div>
