--- a/home.html
+++ b/home.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/styles/main.css">
 <title>Malcolm Andrews Portfolio</title>
 </head>
 <body>
-    <section>
-        <img src="images/profilepic.jpg" id="profilepic" class="floatingimage"/>
-    </section>
-    <section>
-        <div class="floatingnav" id="about">About</div>
-        <div class="floatingnav" id="blog">Blog</div>
-        <div class="floatingnav" id="contact">Contact</div>
-    </section>
+    <div class="container" id="home-border">
+        <div class="container" id="profile-pic-container">
+            <section>
+                <img src="assets/profilepic.jpg" id="profilepic" class="floatingimage"/>
+            </section>
+        </div>
+        <div class="container" id="button-container">
+        <section>
+        <a href="" class="button" id="about-button">About</a>
+        <a href="" class="button" id="blog-button">Blog</a>
+        <a href="" class="button" id="contact-button">Contact</a>
+        </section>
+        </div>
+    </div>
 </body>
 </html>
