starting on about.html

--- a/home.html
+++ b/home.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800;900&display=swap" rel="stylesheet">    
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800;900&display=swap" rel="stylesheet">
 <title>Malcolm Andrews Portfolio</title>
 </head>
 <body>
@@ -13,7 +18,7 @@
         </div>
         <div class="container" id="button-container">
         <section>
-        <a href="" class="button" id="about-button">About</a>
+        <a href="about.html" class="button" id="about-button">About</a>
         <a href="" class="button" id="blog-button">Blog</a>
         <a href="" class="button" id="contact-button">Contact</a>
         </section>
