--- a/about.html
+++ b/about.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800;900&display=swap" rel="stylesheet">    
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800;900&display=swap" rel="stylesheet">
-<title>About Me</title>
-</head>
+    <meta charset="UTF-8">
+    <title>About Me</title>
+    </head>
 <body>
+    <header class="navigation-menu">
+        <nav>
+            <a class="menu-link" alt="Home Page" title="Home Page" href="/home.html">Home</a>
+            <a class="menu-link current-page" alt="About" title="About Me" href="/home.html">About</a>
+            <a class="menu-link" alt="Blog" title="Blog" href="/blog.html">Blog</a>
+            <a class="menu-link" alt="Contact" title="Contact Me" href="/home.html">Contact</a>
+        </nav>
+    </header>
+        <section class="heading">
+            <h1>About</h1>
+        </section>
+        <section>
+            <h2>Who Am I?</h2>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </section>
+        <section>
+            <h2>Skills</h2>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </section>
+        <section>
+            <h2>Experience</h2>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </section>
+        <section>
+            <nav class="container" id="button-container">
+                <a href="about.html" class="button" id="download-cv">Download CV</a>
+                </nav>
+        </section>
+    </main>
+    <div class="footer-border"></div>
+    <footer>
+            <a href="https://github.com/MalcolmKAA"><img src="assets/iconmonstr-github-3.svg" alt="Github" class="footer-link"></a>
+            <a href="https://www.linkedin.com/in/malcolm-ackom"><img src="assets/iconmonstr-linkedin-3.svg" alt="LinkedIn" class="footer-link"></a>
+    </footer>
+    
 </body>
 </html>
