--- a/home.html
+++ b/home.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800;900&display=swap" rel="stylesheet">    
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800;900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+
 <title>Malcolm Andrews Portfolio</title>
 </head>
 <body>
-    <div class="container" id="home-border">
-        <div class="container" id="profile-pic-container">
-            <section>
-                <img src="assets/profilepic.jpg" id="profilepic" class="floatingimage"/>
-            </section>
+    <header id="home-header">
+    <h1>Malcolm Andrews | Full Stack Development</h1>
+    </header>
+      <div class="container" id="pic-container">
+                <img src="assets/profilepic.png" id="pic" class="floating-image"/>
         </div>
-        <div class="container" id="button-container">
-        <section>
+        <nav class="container" id="button-container">
         <a href="about.html" class="button" id="about-button">About</a>
-        <a href="" class="button" id="blog-button">Blog</a>
-        <a href="" class="button" id="contact-button">Contact</a>
+        <a href="blog.html" class="button" id="blog-button">Blog</a>
+        <a href="contact.html" class="button" id="contact-button">Contact</a>
+        </nav>
+        <section class="home-links">
+            <a href="https://github.com/MalcolmKAA"><img src="assets/iconmonstr-github-3.svg" alt="Github" class="footer-link"></a>
+            <a href="https://www.linkedin.com/in/malcolm-ackom"><img src="assets/iconmonstr-linkedin-3.svg" alt="LinkedIn" class="footer-link"></a>
         </section>
-        </div>
-    </div>
+    
 </body>
 </html>
